# ADBTools

./: .eslintrc.json  README.md  bun.lockb  index.html  next.config.mjs  next.config.ts  package-lock.json  package.json  publish-to-auto-release.yml  tailwind.config.ts  tsconfig.json
.github/workflows/: publish-to-auto-release.yml
docs/: index.html  updater.json
docs/assets/: execute.mov
src/: App.css  App.jsx  app.css  app.jsx  neumorphism.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: app.tsx  layout.tsx  neumorphism.css  page.css  page.tsx  search.tsx  shell.tsx  template.tsx
src/app/info/: info.tsx  page.tsx
src/components/: Cmd.css  Cmd.jsx  CmdCard.css  CmdCard.jsx  CmdForm.css  CmdForm.jsx  ConsoleArea.css  ConsoleArea.jsx  DeviceList.css  DeviceList.jsx  EditCmdDialog.css  EditCmdDialog.jsx  EditCmdDialog.tsx  FloatButton.css  FloatButton.jsx  ModalDialog.css  ModalDialog.jsx  ModalDiaog.jsx  NewCmdDialog.jsx  SearchFloatButton.css  SearchFloatButton.jsx  cmd-card.tsx  cmd-form.tsx  console-area.tsx  device-list.tsx  edit-cmd-dialog.tsx  navigation-bar.tsx  new-cmd-dialog.tsx  search-input.tsx  version-chip.tsx  window-control.tsx
src/database/: AdbDatabase.ts  Database.js  Database.ts
src/hooks/: useCmds.ts  useDevices.ts  useExecute.ts  useSearchText.ts
src/model/: Cmd.ts  CmdModel.js
src/repository/: CmdRepository.ts
src/shell/: ADBShell.js  ADBShell.ts
src/styles/: globals.css
src/widgets/: card.tsx
(+8 files in other folders)
