[package]
name = "adbtools"
version = "0.0.0"
description = "adb command tools"
authors = ["kouqurong@outlook.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
tauri = { version = "^2.0.0", features = ["macos-private-api"] }
tauri-plugin-shell = "^2.0.0"
serde_json = "1.0"
tauri-plugin-updater = "^2.0.0"
tauri-plugin-sql = {version = "^2.0.0", features = ["sqlite"] }
tauri-plugin-os = "^2.0.0"
tauri-plugin-process = "^2.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
